Tidy everything up.

--- a/OPS/assets/tocConfig-1.xhtml
+++ b/OPS/assets/tocConfig-1.xhtml
@@ -1,3 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
-<?xml-stylesheet href='css/tocConfig-1.css' type='text/css' media='all'?><?xml-stylesheet href='css/tocConfig-1-paginated.css' type='text/css' media='all'?><html xmlns:xlink="http://www.w3.org/1999/xlink" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8"/><title>Table Of Contents Configuration File</title><link rel="stylesheet" type="text/xml+svg" href="svg/tocConfig-1.svg"/></head><body><svg xmlns="http://www.w3.org/2000/svg" id="media-1" viewBox="0 0 457.000 668.000" preserveAspectRatio="none" data-toc-config="backgroundImage"><title></title><desc> </desc><image class="s1" width="457.000" height="668.000" xlink:href="images/87974949a-2.jpg" clip-path="url(#ClipPath-2)"/></svg><object type="application/x-ibooks+toc"><object id="viewport-0" type="application/x-ibooks+shape"><svg xmlns="http://www.w3.org/2000/svg" id="viewport-0-svg" viewBox="0 0 440.000 260.000" preserveAspectRatio="none"><title></title><desc> </desc><rect class="s1" x="0" y="0" width="440.000" height="260.000"/></svg><div class="s2" id="viewport-0-div"><p id="textShape-7-p0" class="s3">1.1	Untitled</p><p id="textShape-7-p1-1"> </p></div></object></object><object type="application/x-ibooks+shape" id="textShape-8"><svg xmlns="http://www.w3.org/2000/svg" id="textShape-8-svg" viewBox="0 0 440.000 82.000" preserveAspectRatio="none"><title></title><desc> </desc><rect class="s1" x="0" y="0" width="440.000" height="82.000"/></svg><div class="s2" id="textShape-8-div"><p id="textShape-8-p0" class="s4">Untitled</p></div></object><object type="application/x-ibooks+shape" id="textShape-9"><svg xmlns="http://www.w3.org/2000/svg" id="textShape-9-svg" viewBox="0 0 440.000 21.000" preserveAspectRatio="none"><title></title><desc> </desc><rect class="s1" x="0" y="0" width="440.000" height="21.000"/></svg><div class="s2" id="textShape-9-div"><p id="textShape-9-p0" class="s5">Chapter 1</p></div></object></body></html>
+<?xml-stylesheet href='css/tocConfig-1.css' type='text/css' media='all'?>
+<?xml-stylesheet href='css/tocConfig-1-paginated.css' type='text/css' media='all'?>
+<html xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+	<head>
+		<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8"/>
+		<title>Table Of Contents Configuration File</title>
+		<link rel="stylesheet" type="text/xml+svg" href="svg/tocConfig-1.svg"/>
+	</head>
+	<body>
+		<svg xmlns="http://www.w3.org/2000/svg" id="media-1" viewBox="0 0 457.000 668.000" preserveAspectRatio="none" data-toc-config="backgroundImage">
+			<title/>
+			<desc> </desc>
+			<image class="s1" width="457.000" height="668.000" xlink:href="images/87974949a-2.jpg" clip-path="url(#ClipPath-2)"/>
+		</svg>
+		<object type="application/x-ibooks+toc">
+			<object id="viewport-0" type="application/x-ibooks+shape">
+				<svg xmlns="http://www.w3.org/2000/svg" id="viewport-0-svg" viewBox="0 0 440.000 260.000" preserveAspectRatio="none">
+					<title/>
+					<desc> </desc>
+					<rect class="s1" x="0" y="0" width="440.000" height="260.000"/>
+				</svg>
+				<div class="s2" id="viewport-0-div">
+					<p id="textShape-7-p0" class="s3">1.1	Untitled</p>
+					<p id="textShape-7-p1-1"> </p>
+				</div>
+			</object>
+		</object>
+		<object type="application/x-ibooks+shape" id="textShape-8">
+			<svg xmlns="http://www.w3.org/2000/svg" id="textShape-8-svg" viewBox="0 0 440.000 82.000" preserveAspectRatio="none">
+				<title/>
+				<desc> </desc>
+				<rect class="s1" x="0" y="0" width="440.000" height="82.000"/>
+			</svg>
+			<div class="s2" id="textShape-8-div">
+				<p id="textShape-8-p0" class="s4">Untitled</p>
+			</div>
+		</object>
+		<object type="application/x-ibooks+shape" id="textShape-9">
+			<svg xmlns="http://www.w3.org/2000/svg" id="textShape-9-svg" viewBox="0 0 440.000 21.000" preserveAspectRatio="none">
+				<title/>
+				<desc> </desc>
+				<rect class="s1" x="0" y="0" width="440.000" height="21.000"/>
+			</svg>
+			<div class="s2" id="textShape-9-div">
+				<p id="textShape-9-p0" class="s5">Chapter 1</p>
+			</div>
+		</object>
+	</body>
+</html>
