--- a/OPS/glossary.xhtml
+++ b/OPS/glossary.xhtml
@@ -1,3 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
-<?xml-stylesheet href='assets/css/glossary.css' type='text/css' media='all'?><html xmlns:xlink="http://www.w3.org/1999/xlink" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8"/><title>Glossary</title></head><body><p> </p></body></html>
+<?xml-stylesheet href='assets/css/glossary.css' type='text/css' media='all'?>
+<html xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+	<head>
+		<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8"/>
+		<title>Glossary</title>
+	</head>
+	<body>
+		<p> </p>
+	</body>
+</html>
